<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CopyrightActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_margin="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copy_title"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/copy_box0"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copy_box0"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/copy_box1"
        android:layout_marginTop="10dp"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copy_box1"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copy_box0"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/copy_box12"
        android:layout_margin="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copy_box12"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copy_box1"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20dp"/>


    <TextView
        android:id="@+id/copy_box2"
        android:layout_marginTop="40dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copy_box2"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copy_box12"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/copy_box3"
        android:layout_margin="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copy_box3"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copy_box2"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15dp"/>


    <TextView
        android:id="@+id/copy_box4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/copy_box4"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copy_box3"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/copy_box5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/copy_link"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copy_box4"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>