<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />



    <EditText
        android:id="@+id/search_edit_text"
        android:layout_height="45dp"
        android:layout_width="0dp"
        android:hint="@string/search_hint"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:textSize="20dp"/>

    <ImageView
        android:id="@+id/x"
        android:title="cancel"
        android:layout_margin="12dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        app:showAsAction="always"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_menu_close_clear_cancel" />

    <Button
        android:id="@+id/search_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/search_button"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/logo"

        app:layout_constraintTop_toBottomOf="@id/search_edit_text"

        />

    <Button
        android:id="@+id/random_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/random_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/search_edit_text"

        />

    <TextView
        android:id="@+id/copyright_link"
        android:layout_margin="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copy_link"
        android:gravity="center"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:background="@drawable/bwlions"
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/copyright_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/copyright_link"
        />

</androidx.constraintlayout.widget.ConstraintLayout>